--- a/second-page.html
+++ b/second-page.html
@@ -4,11 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>second page</title>
+    <title>Sign In</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="second-style.css">
+    <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/latest/normalize.css" />
+    <script src="second-script.js"></script>
 </head>
 
 <body>
-    <h1>welcome to second page</h1>
+    <div class="menu-wrapper">
+        <div class='background'>
+
+        </div>
+        <div class="menu">
+            <h1 class="title-menu">Меню</h1>
+            <div class="menu-item">
+                <img class="icon" src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
+                <div class="item-text"> Войти </div>
+            </div>
+            <div class="menu-item">
+                <img class="icon" src="https://img.icons8.com/ios/50/000000/give-gift.png" />
+                <div class="item-text"> Акции </div>
+            </div>
+            <div class="menu-item">
+                <img class="icon" src="https://img.icons8.com/ios/50/000000/shopping-basket-2.png" />
+                <div class="item-text"> Корзина </div>
+            </div>
+        </div>
+    </div>
+    <div class="main">
+        <div class="img">
+            <img src="https://img.icons8.com/ios/50/000000/menu.png" />
+        </div>
+        <div class="flex-container">
+            <div class="flex-1">
+                <div class="container">
+                    <div class="discount">
+                        <div class="discount-back">
+                            <div class="text">До -31%</div>
+                        </div>
+                    </div>
+                    <div class="add-to-fav"><img src="./assets/fav.svg"></div>
+                </div>
+            </div>
+            <div class="flex-2">
+                <div class="text combo">Комбо 5 «пицц»</div>
+                <div class="text combo-about">Комбо по суперцене</div>
+                <div class="price-container">
+                    <div class="text price">1980₽</div>
+                    <div class="text new-price">1650₽</div>
+                </div>
+                <div class="button-buy">
+                    <div class="text">В корзину</div>
+                    <img class="add" src="./assets/icon-add.svg">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
