--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="wrapper">
             <form class="form" id="signin" autocomplete="off">
                 <div class="input-wrapper">
-                    <input type="text" id="user" name="user"  />
+                    <input type="text" id="user" name="user" />
                     <label for="user">Email</label>
                 </div>
                 <div class="input-wrapper">
@@ -49,7 +49,7 @@
             </form>
         </div>
     </div>
-    <!-- <a href="./second-page.html">go to second page</a> -->
+    <a href="./second-page.html">go to second page</a>
 
 </body>
 
