--- a/second-page.html
+++ b/second-page.html
@@ -36,27 +36,29 @@
         <div class="img">
             <img src="https://img.icons8.com/ios/50/000000/menu.png" />
         </div>
-        <div class="flex-container">
-            <div class="flex-1">
-                <div class="container">
-                    <div class="discount">
-                        <div class="discount-back">
+        <div class="product-card">
+            <div class="product-card-image">
+                <div class="labels">
+                    <div class="label-discount">
+                        <div class="label-discount-back">
                             <div class="text">До -31%</div>
                         </div>
                     </div>
-                    <div class="add-to-fav"><img src="./assets/fav.svg"></div>
+                    <div class="label-add-to-favourite"><img src="./assets/fav.svg"></div>
                 </div>
             </div>
-            <div class="flex-2">
-                <div class="text combo">Комбо 5 «пицц»</div>
-                <div class="text combo-about">Комбо по суперцене</div>
+            <div class="product-card-info">
+                <div class="title">Комбо 5 «пицц»</div>
+                <div class="description">Комбо по суперцене</div>
                 <div class="price-container">
                     <div class="text price">1980₽</div>
                     <div class="text new-price">1650₽</div>
                 </div>
-                <div class="button-buy">
-                    <div class="text">В корзину</div>
-                    <img class="add" src="./assets/icon-add.svg">
+                <div class="button-container">
+                    <div class="button-buy">
+                        <div class="text">В корзину</div>
+                        <img class="add" src="./assets/icon-add.svg">
+                    </div>
                 </div>
             </div>
         </div>
