--- a/second-page.html
+++ b/second-page.html
@@ -50,11 +50,23 @@
             <div class="product-card-info">
                 <div class="title">Комбо 5 «пицц»</div>
                 <div class="description">Комбо по суперцене</div>
-                <div class="price-container">
+
+                <div class="product-size">
+                    <div class="size-button">30 cm</div>
+                    <div class="size-button">47 cm</div>
+                    <div class="size-button">53 cm</div>
+                </div>
+                <!-- <div class="price-container">
                     <div class="text price">1980₽</div>
                     <div class="text new-price">1650₽</div>
-                </div>
-                <div class="button-container">
+                </div> -->
+
+
+                <div class="buy-content">
+                    <div class="price-container">
+                        <div class="text price">1980₽</div>
+                        <div class="text new-price">1650₽</div>
+                    </div>
                     <div class="button-buy">
                         <div class="text">В корзину</div>
                         <img class="add" src="./assets/icon-add.svg">
