--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -39,17 +39,39 @@
             <div class="intro__inner">
                 <div class="intro__title">БОЛЬШОЙ ТЕАТР</div>
                 <div class="intro__info">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах,<br>
-            с 1886
-            года
-            —
-            Петербургская консерватория. <br>Первое постоянное в Санкт-Петербурге, крупнейшее в России и
-            одно из
-            крупнейших<br>
-            театральных зданий в Европе XVIII.</div>
+                    с 1886
+                    года
+                    —
+                    Петербургская консерватория. <br>Первое постоянное в Санкт-Петербурге, крупнейшее в России и
+                    одно из
+                    крупнейших<br>
+                    театральных зданий в Европе XVIII.</div>
             </div>
             <a class="button" href="#">афиша</a>
         </div>
     </div>
+
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h2 class="section__title"> О театре </h2>
+            </div>
+            <div class="section__main">
+                <h3 class="section__main title">Самый лучший театр СПБ</h3>
+                <div class="section__main text">
+                    <p>Как свидетельствуют архивные документы, первое каменное здание Большого театра начали возводить в
+                        1775 году по проекту Антонио Ринальди. В дальнейшем, после того как Ринальди упал с лесов и не
+                        мог
+                        лично наблюдать за ходом работ, Екатерина II поручила немецкому театральному декоратору и
+                        архитектору Людвигу Филиппу Тишбейну создать новый проект театра, который и был воплощён
+                        архитекторами Ф. В. фон Бауром и М. А. Деденёвым. Открытие его состоялось в 1783 году, хотя,
+                        основываясь на других свидетельствах, годом открытия можно считать 1784 год.</p>
+                </div>
+                <h3 class="section__main title">немного о цифрах</h3>
+                <div></div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
