--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -22,6 +22,10 @@
                     <a class="nav__link" href="#">ПАРТНЕРЫ ТЕАТРА</a>
                     <a class="nav__link" href="#">КОНТАКТЫ</a>
                 </nav>
+
+                <nav class="nav">
+                    <a href="tel:+74951234567" class="nav__link">+7 495 123-45-67</a>
+                </nav>
             </div>
         </div>
     </header>
@@ -52,10 +56,11 @@
     </div>
 
     <section class="section">
-        <div class="container">
-            <div class="section__header">
-                <h2 class="section__title"> О театре </h2>
-            </div>
+        <div class="section__header">
+            <h2 class="section__title"> О театре </h2>
+        </div>
+        <div class="section__container">
+
             <div class="section__main">
                 <h3 class="section__main title">Самый лучший театр СПБ</h3>
                 <div class="section__main text">
@@ -67,8 +72,13 @@
                         архитекторами Ф. В. фон Бауром и М. А. Деденёвым. Открытие его состоялось в 1783 году, хотя,
                         основываясь на других свидетельствах, годом открытия можно считать 1784 год.</p>
                 </div>
+            </div>
+            <div class="section__main">
                 <h3 class="section__main title">немного о цифрах</h3>
-                <div></div>
+                <div class="section__main text">1600 посадочных мест</div>
+            </div>
+            <div class="section__main">
+                <img src="./images/theatre_small.jpg">
             </div>
         </div>
     </section>
