--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -30,16 +30,19 @@
         </div>
     </header>
     <div class="intro">
-        <div class="container">
-            <!-- <div class="fixed-panel">
-            <div class="title-panel">КОНТАКТНАЯ ИНФОРМАЦИЯ</div>
+
+        <div class="fixed-panel">
             <div class="fixed-panel-icons">
                 <img src="./images/facebook.svg">
                 <img src="./images/facebook.svg">
                 <img src="./images/facebook.svg">
                 <img src="./images/facebook.svg">
             </div>
-        </div> -->
+            <div class="title-panel">КОНТАКТНАЯ ИНФОРМАЦИЯ</div>
+
+        </div>
+
+        <div class="container">
             <div class="intro__inner">
                 <div class="intro__title">БОЛЬШОЙ ТЕАТР</div>
                 <div class="intro__info">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах,<br>
@@ -60,7 +63,6 @@
             <h2 class="section__title"> О театре </h2>
         </div>
         <div class="section__container">
-
             <div class="section__main">
                 <h3 class="section__main title">Самый лучший театр СПБ</h3>
                 <div class="section__main text">
@@ -73,14 +75,45 @@
                         основываясь на других свидетельствах, годом открытия можно считать 1784 год.</p>
                 </div>
             </div>
-            <div class="section__main">
+            <div class="section__main center">
                 <h3 class="section__main title">немного о цифрах</h3>
+                <img src="./images/armchair 1.svg" class="section__ico">
                 <div class="section__main text">1600 посадочных мест</div>
+                <img src="./images/curtain.svg" class="section__ico">
+                <div class="section__main text">350 лет истории</div>
             </div>
-            <div class="section__main">
+            <div class="section__main image">
                 <img src="./images/theatre_small.jpg">
             </div>
         </div>
+    </section>
+
+    <section class="section">
+        <div class="section__header">
+            <h2 class="section__title">Наши постановки</h2>
+            <div class="section__container__three">
+                <img src="./images/img1.jpg">
+                <div class="lens__image">
+                    <img src="./images/img2.jpg" class="img2">
+                    <img src="./images/lens.png" class="lens">
+                </div>
+                <img src="./images/img3.jpg">
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="section__container four">
+            <img src="./images/Rectangle 28.jpg">
+            <div class="container__stars">
+                <img src="./images/star.svg">
+                <img src="./images/star.svg">
+                <img src="./images/star.svg">
+                <img src="./images/star.svg">
+                <img src="./images/star.svg">
+            </div>
+        </div>
+
     </section>
 </body>
 
