--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header-inner">
+            <div class="header__inner">
                 <nav class="nav">
                     <a class="nav__link" href="#">ГЛАВНАЯ</a>
                     <a class="nav__link" href="#">О ТЕАТРЕ</a>
