--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -35,8 +35,11 @@
             <div class="title-panel">КОНТАКТНАЯ ИНФОРМАЦИЯ</div>
 
             <div class="fixed-panel__line"></div>
+                <div class="fixed-panel-icon instagram"></div>
+                <div class="fixed-panel-icon facebook"></div>
+                <div class="fixed-panel-icon vk"></div>
+                <div class="fixed-panel-icon youtube"></div>
 
-            <div class="fixed-panel-icon instagram"></div>
         </div>
 
         <div class="container">
@@ -100,21 +103,27 @@
                 <div class="projects__item">
                     <img src="./images/img2.jpg" class="projects__item-image">
                     <img src="./images/lens.png" class="lens">
+                    <div class="projects__item-name">ОСКАР 2020</div>
+                    <div class="projects__item-date">сентябрь 2020</div>
                 </div>
                 <div class="projects__item">
                     <img src="./images/img3.jpg" class="projects__item-image">
                     <img src="./images/lens.png" class="lens">
+                    <div class="projects__item-name">золотой грамофон</div>
+                    <div class="projects__item-date">июль 2020</div>
                 </div>
                 <div class="projects__item">
                     <img src="./images/img4.jpg" class="projects__item-image">
                     <img src="./images/lens.png" class="lens">
+                    <div class="projects__item-name">щелкунчик</div>
+                    <div class="projects__item-date">май 2020</div>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="section">
-        <div class="section__container four">
+        <div class="section__container-rating">
             <img src="./images/Rectangle 28.jpg">
             <div class="container__stars">
                 <img src="./images/star.svg">
