--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -35,10 +35,10 @@
             <div class="title-panel">КОНТАКТНАЯ ИНФОРМАЦИЯ</div>
 
             <div class="fixed-panel__line"></div>
-                <div class="fixed-panel-icon instagram"></div>
-                <div class="fixed-panel-icon facebook"></div>
-                <div class="fixed-panel-icon vk"></div>
-                <div class="fixed-panel-icon youtube"></div>
+            <div class="fixed-panel-icon instagram"></div>
+            <div class="fixed-panel-icon facebook"></div>
+            <div class="fixed-panel-icon vk"></div>
+            <div class="fixed-panel-icon youtube"></div>
 
         </div>
 
@@ -123,14 +123,24 @@
     </section>
 
     <section class="section">
-        <div class="section__container-rating">
+        <div class="section__container rating">
             <img src="./images/Rectangle 28.jpg">
-            <div class="container__stars">
-                <img src="./images/star.svg">
-                <img src="./images/star.svg">
-                <img src="./images/star.svg">
-                <img src="./images/star.svg">
-                <img src="./images/star.svg">
+            <div class="section__container-rating">
+                <div class="section__container-rating-text">
+                   <p>2018</p>
+                   <p>2019</p>
+                   <p>2020</p>
+                </div>
+                <div class="container__stars">
+                    <img src="./images/star.svg">
+                    <img src="./images/star.svg">
+                    <img src="./images/star.svg">
+                    <img src="./images/star.svg">
+                    <img src="./images/star.svg">
+                </div>
+            </div>
+            <div class="section__container-rating about">
+                Лучший театр по мнению театральных критиков Парижа
             </div>
         </div>
 
