--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -125,25 +125,26 @@
     <section class="section">
         <div class="section__container rating">
             <img src="./images/Rectangle 28.jpg">
-            <div class="section__container-rating">
-                <div class="section__container-rating-text">
-                   <p>2018</p>
-                   <p>2019</p>
-                   <p>2020</p>
+            <div class="section__container-main">
+                <div class="section__container-rating">
+                    <div class="section__container-rating-text">
+                        <p>2018</p>
+                        <p>2019</p>
+                        <p>2020</p>
+                    </div>
                 </div>
-                <div class="container__stars">
-                    <img src="./images/star.svg">
-                    <img src="./images/star.svg">
-                    <img src="./images/star.svg">
-                    <img src="./images/star.svg">
-                    <img src="./images/star.svg">
+                <div class="section__container-rating about">
+                    <div class="container__stars">
+                        <img src="./images/star.svg" class="star-img">
+                        <img src="./images/star.svg" class="star-img">
+                        <img src="./images/star.svg" class="star-img">
+                        <img src="./images/star.svg" class="star-img">
+                        <img src="./images/star.svg" class="star-img">
+                    </div>
+                    Лучший театр по мнению театральных критиков Парижа
                 </div>
-            </div>
-            <div class="section__container-rating about">
-                Лучший театр по мнению театральных критиков Парижа
             </div>
         </div>
-
     </section>
 </body>
 
