--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     </header>
+    
     <div class="intro">
 
         <div class="fixed-panel">
@@ -91,33 +92,33 @@
     <section class="section">
         <div class="section__header">
             <h2 class="section__title">Наши постановки</h2>
-            <div class="projects__slider">
-                <div class="projects__item">
-                    <!-- добавить затемнение -->
-                    <img src="./images/img1.jpg" class="projects__item-image">
-                    <!-- отображать только при наведении -->
-                    <img src="./images/lens.png" class="lens">
-                    <div class="projects__item-name">ОСКАР 2020</div>
-                    <div class="projects__item-date">сентябрь 2020</div>
-                </div>
-                <div class="projects__item">
-                    <img src="./images/img2.jpg" class="projects__item-image">
-                    <img src="./images/lens.png" class="lens">
-                    <div class="projects__item-name">ОСКАР 2020</div>
-                    <div class="projects__item-date">сентябрь 2020</div>
-                </div>
-                <div class="projects__item">
-                    <img src="./images/img3.jpg" class="projects__item-image">
-                    <img src="./images/lens.png" class="lens">
-                    <div class="projects__item-name">золотой грамофон</div>
-                    <div class="projects__item-date">июль 2020</div>
-                </div>
-                <div class="projects__item">
-                    <img src="./images/img4.jpg" class="projects__item-image">
-                    <img src="./images/lens.png" class="lens">
-                    <div class="projects__item-name">щелкунчик</div>
-                    <div class="projects__item-date">май 2020</div>
-                </div>
+        </div>
+        <div class="projects__slider">
+            <div class="projects__item">
+                <!-- добавить затемнение -->
+                <img src="./images/img1.jpg" class="projects__item-image">
+                <!-- отображать только при наведении -->
+                <img src="./images/lens.png" class="lens">
+                <div class="projects__item-name">ОСКАР 2020</div>
+                <div class="projects__item-date">сентябрь 2020</div>
+            </div>
+            <div class="projects__item">
+                <img src="./images/img2.jpg" class="projects__item-image">
+                <img src="./images/lens.png" class="lens">
+                <div class="projects__item-name">ОСКАР 2020</div>
+                <div class="projects__item-date">сентябрь 2020</div>
+            </div>
+            <div class="projects__item">
+                <img src="./images/img3.jpg" class="projects__item-image">
+                <img src="./images/lens.png" class="lens">
+                <div class="projects__item-name">золотой грамофон</div>
+                <div class="projects__item-date">июль 2020</div>
+            </div>
+            <div class="projects__item">
+                <img src="./images/img4.jpg" class="projects__item-image">
+                <img src="./images/lens.png" class="lens">
+                <div class="projects__item-name">щелкунчик</div>
+                <div class="projects__item-date">май 2020</div>
             </div>
         </div>
     </section>
@@ -145,6 +146,62 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="section">
+        <div class="section__header">
+            <h2 class="section__title">Партнеры театра</h2>
+        </div>
+        <div class="section__container">
+            <div class="section__container__partner">
+                <img src="./images/logo.svg" class="logo-img">
+                <img src="./images/logo.svg" class="logo-img">
+                <img src="./images/logo.svg" class="logo-img">
+                <img src="./images/logo.svg" class="logo-img">
+                <img src="./images/logo.svg" class="logo-img">
+                <img src="./images/logo.svg" class="logo-img">
+                <img src="./images/logo.svg" class="logo-img">
+                <img src="./images/logo.svg" class="logo-img">
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="section__header">
+            <h2 class="section__title">Стать меценатом</h2>
+        </div>
+
+        <div class="section__container contacts">
+
+            <div class="contacts-phone">
+                <h3 class="h3__contact">+7 (812) 123-45-55</h3>
+                <h3 class="h3__contact">+7 (812) 123-45-66</h3>
+                <h3 class="h3__contact">info@theater.ru</h3>
+                <h3 class="h3__contact">г. санкт-петербург, невский 140</h3>
+            </div>
+            <div class="application-form">
+                <div class="contacts-form">
+                    <div class="contacts-form-inputs">
+                        <input class="input-text" type="text" value="Имя">
+                        <input class="input-text" type="text" value="Телефон">
+                    </div>
+                    <div class="contacts-form-inputs">
+                        <input class="input-text" type="text" value="Компания">
+                        <input class="input-text" type="text" value="E-mail">
+                    </div>
+                    <div class="contacts-form-inputs">
+                        <input class="textarea" type="textarea" value="Сообщение">
+                    </div>
+                </div>
+                <div class="bottom-container">
+                    <div class="safety-text">* Ваши данные не будут переданы третьим лицам, 100% вероятность.
+                        Конфиденциальность мы гарантируем, и защищаем персональные данные согласно законку ФЗ-52.</div>
+                    <button class="button">отправить</button>
+                </div>
+            </div>
+
+        </div>
+
     </section>
 </body>
 
