--- a/part3/index.html
+++ b/part3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HouseVOP жилой комплекс</title>
+    <title>HouseVOP</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://github.com/necolas/normalize.css/" />
 </head>
@@ -13,25 +13,25 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <nav class="nav">
-                    <div class="logo">
-                        <img src="./images/logo.png" alt="">
-                        <div class="logo__text">
-                            жилой комплекс
-                        </div>
-                    </div>
-                </nav>
-
-                <nav class="nav">
-                    <a href="#" class="nav__link">О комплексе</a>
-                    <a href="#" class="nav__link">Район</a>
-                    <a href="#" class="nav__link">Каталог квартир</a>
-                    <a href="#" class="nav__link">Ипотека</a>
-                    <a href="#" class="nav__link">Контакты</a>
+                <div class="header__logo">
+                    HouseVOP
+                </div>
+                <div class="header__logo text">жилой комплекс</div>
+                <nav>
+                    <a href="#">О комплексе</a>
+                    <a href="#">Район</a>
+                    <a href="#">Каталог квартир</a>
+                    <a href="#">Ипотека</a>
+                    <a href="#">Контакты</a>
                 </nav>
             </div>
         </div>
     </header>
+
+    <div class="intro">
+        <div class="container">
+        </div>
+    </div>
 </body>
 
 </html>
