--- a/part2/land-index.html
+++ b/part2/land-index.html
@@ -123,7 +123,7 @@
     </section>
 
     <section class="section">
-        <div class="section__container-rating">
+        <div class="section__container">
             <img src="./images/Rectangle 28.jpg">
             <div class="container__stars">
                 <img src="./images/star.svg">
