--- a/part3/index.html
+++ b/part3/index.html
@@ -6,30 +6,160 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HouseVOP</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://github.com/necolas/normalize.css/" />
+    <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/latest/normalize.css" />
 </head>
 
 <body>
     <header class="header">
         <div class="container">
+
             <div class="header__inner">
+
                 <div class="header__logo">
-                    HouseVOP
+                    <div class="header__logo logo">HouseVOP</div>
+                    <div class="header__logo text">жилой комплекс</div>
                 </div>
-                <div class="header__logo text">жилой комплекс</div>
-                <nav>
+
+                <nav class="header__menu">
                     <a href="#">О комплексе</a>
                     <a href="#">Район</a>
                     <a href="#">Каталог квартир</a>
                     <a href="#">Ипотека</a>
                     <a href="#">Контакты</a>
                 </nav>
+
             </div>
+
         </div>
     </header>
 
     <div class="intro">
         <div class="container">
+
+            <div class="intro__inner">
+                <div class="intro__title">
+                    <!-- TODO: как закрепить текст -->
+                    <div class="intro__text"> Жилой комплекс в историческом центре</div>
+                    <img src="./images/mouse.svg" alt="" class="inner__mouse">
+                </div>
+
+                <div class="intro__footer">
+
+                    <div class="intro__footer adress">
+                        <img src="./images/placeholder.svg" alt="" class="footer__placeholder">
+                        <!-- TODO: geo link -->
+                        <div class="footer__text">Наб. реки Фонтанки 10-15</div>
+                    </div>
+
+                    <div class="intro__footer phone">
+                        <img src="./images/phone-call.svg" alt="" class="footer__phone">
+                        <a href="tel:+78121234567" class="footer__text">8 (812) 123-45-67</a>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="second">
+        <div class="container">
+            <div class="testimonials">
+
+                <div class="testimonials-box">
+                    <img src="./images/bench.svg" alt="" class="testimonials-box ico">
+                    <div class="testimonials-box text">
+                        Рядом исторические парки и скверы
+                    </div>
+                </div>
+
+                <div class="testimonials-box">
+                    <img src="./images/building.svg" alt="" class="testimonials-box ico">
+                    <div class="testimonials-box text">
+                        Полностью обустроенный
+                    </div>
+                </div>
+
+                <div class="testimonials-box">
+                    <img src="./images/fountain.svg" alt="" class="testimonials-box ico">
+                    <div class="testimonials-box text">
+                        10 фонтанов на территории
+                    </div>
+                </div>
+
+                <div class="testimonials-box">
+                    <img src="./images/bicycle.svg" alt="" class="testimonials-box ico">
+                    <div class="testimonials-box text">
+                        6 км<br>велодорожек
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="third">
+        <div class="container">
+
+            <div class="container__title">
+                Наши квартиры
+            </div>
+
+            <div class="container__apartments">
+
+                <div class="apartment">
+                    <img src="./images/loft1.jpg" alt="" class="apartment-image">
+                    <div class="apartment-title">Лофт - 2 этажа</div>
+                </div>
+
+                <div class="apartment">
+                    <img src="./images/loft2.jpg" alt="" class="apartment-image">
+                    <div class="apartment-title">Лофт - 3 этажа</div>
+                </div>
+
+                <div class="apartment">
+                    <img src="./images/loft2.jpg" alt="" class="apartment-image">
+                    <div class="apartment-title">Лофт - 3 этажа</div>
+                </div>
+
+                <div class="apartment">
+                    <img src="./images/loft1.jpg" alt="" class="apartment-image">
+                    <div class="apartment-title">Лофт - 2 этажа</div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="fourth">
+        <div class="container">
+
+            <div class="container__title">
+                Хотите посмотреть?
+            </div>
+
+            <div class="container__cta">
+
+                <div class="cta-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem
+                    Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                    безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для
+                    распечатки образцов.
+                </div>
+
+                <div class="cta__form">
+
+                    <div class="input__name"></div>
+                    <div class="input__phone"></div>
+                    <div class="cta__button">Посмотреть район</div>
+                    <div class="cta__safety-text">
+                        *Мы никому не передаем ваши данные. И не сохраняем ваш номер в базу.
+                    </div>
+
+                </div>
+
+            </div>
+
         </div>
     </div>
 </body>
